--- a/app/swipe/style.scss
+++ b/app/swipe/style.scss
@@ -47,6 +47,7 @@
             #image {
                 overflow: hidden;
                 background-color: red;
+                object-fit: cover;
             }
 
             #description {
