We changed the colour!

--- a/app/swipe/style.scss
+++ b/app/swipe/style.scss
@@ -101,7 +101,7 @@
                 border-radius: 18px;
                 font-size: 14px;
                 box-shadow: 1px 1px grey;
-                background-color: #6750A4;
+                background-color: #2772D7;
             }
 
             .picture-button {
