--- a/app/swipe/style.scss
+++ b/app/swipe/style.scss
@@ -14,13 +14,14 @@
         align-items: center;
         flex-direction: column;
         z-index: 0;
+        margin-top: -30px;
 
         #colors {
             height: 400px;
             width: 430px;
-            top: 98px;
-            left: 400px;
-            position: absolute;
+            top: 0px;
+            left: 0px;
+            position: relative;
 
             #no {
                 height: inherit;
@@ -43,6 +44,7 @@
             border: 1px solid black;
             border-radius: 15px;
             overflow: hidden;
+            margin-top: -400px;
 
             #image {
                 overflow: hidden;
